--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ time, mark, audio, video {
 
 body {
   line-height: 1;
+  background: rgb(62, 62, 62);
 }
 
 article, aside, details, figcaption, figure,
